default/objects/E2E_Docusign_Templates__c/E2E_Docusign_Templates__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Docusign Templates</label>
</CustomObject>