default/objects/E2E_Docusign_Templates__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <label>Attachment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>