default/objects/E2E_Docusign_Templates__c/fields/Docusign_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Template_Id__c</fullName>
    <label>Docusign Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>