default/objects/E2E_Docusign_Templates__c/fields/Docusign_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Template_Name__c</fullName>
    <label>Docusign Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>